# blescanne

./: .gitignore  BUILD-GUIDE.md  INSTALL.md  Installing  QUICK-BUILD.md  README.en.md  README.md  Starting  build-app.bat  build-app.ps1  build-final-app.bat  clean-and-run.bat  index.html  package-lock.json  package.json  quick-start.ps1  quick-test.bat  run-release.bat  run.bat  setup-and-run.bat  show-ble-info.bat  simple-build.bat  smart-build.ps1  tailwind.config.js  test-build.bat  test-compile.bat  vite.config.ts
.github/workflows/: windows-build.yml
public/: characteristic_names.txt  company_identifiers.txt
scripts/: clean.bat  clean.ps1  dev.bat  dev.ps1  fetch-build-simpleble.ps1  smoke-release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AdapterInfo.tsx  DeviceCard.tsx  DeviceDetails.tsx  LanguageSwitcher.tsx  ScanControls.tsx  ScanFilter.tsx  ThemeSwitcher.tsx
src/contexts/: ThemeContext.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/i18n/locales/en/: about.json  common.json  device.json  home.json
src/i18n/locales/es/: about.json  common.json  device.json  home.json
src/i18n/locales/zh/: about.json  common.json  device.json  home.json
src/pages/: AboutPage.tsx  DeviceDetailsPage.tsx
src/services/: bleService.ts  windowService.ts
src/types/: ble.ts  theme.ts
src/utils/: advDataParser.ts  bleUtils.ts  characteristicNamesLoader.ts  companyIdentifiersLoader.ts  manufacturerUtils.ts  themeManager.ts
